--- a/conflict_mapping.ipynb
+++ b/conflict_mapping.ipynb
@@ -88,7 +88,7 @@
         "# Documentation: https://www.ncbi.nlm.nih.gov/books/NBK25500/\n",
         "\n",
         "def search(query):\n",
-        "    Entrez.email = 'shaurabh.anand@apu.edu.in' # Individual account only for testing purpose. Not for production and deployement.\n",
+        "    Entrez.email = '' # Enter email address with PubMed account.\n",
         "    handle = Entrez.esearch(db='pubmed',\n",
         "                            sort='relevance',\n",
         "                            retmax='500',\n",
@@ -100,7 +100,7 @@
         "\n",
         "def fetch_details(id_list):\n",
         "    ids = ','.join(id_list)\n",
-        "    Entrez.email = 'shaurabh.anand@apu.edu.in' # Individual account only for testing purpose. Not for production and deployement.\n",
+        "    Entrez.email = '' # Enter email.\n",
         "    handle = Entrez.efetch(db='pubmed',\n",
         "                           retmode='xml',\n",
         "                           id=ids)\n",
@@ -210,7 +210,7 @@
         "    \"engine\": \"google_news\",\n",
         "    \"q\": \"human-wildlife-conflict india\",\n",
         "    \"gl\": \"in\",\n",
-        "    \"api_key\": \"bedfc950b4dd950b98eb72d44c22e853d16a7d63aaf64c7838f79dde1dbcbc0d\" # Private Key, should not be shared. Supports only 100 searches per month\n",
+        "    \"api_key\": \"\" # Include your key\n",
         "}\n",
         "\n",
         "search = GoogleSearch(params)\n",
